Add text to root div in taskpane.html

--- a/taskpane.html
+++ b/taskpane.html
@@ -13,6 +13,6 @@
   <!-- addin has a gray background (looks broken) in outlook when resized without a white background -->
 
   <body style="background-color: white">
-    <div id="root" style="margin-right: 4px"></div>
+    <div id="root" style="margin-right: 4px">IWARP CA Office Components</div>
   </body>
 </html>
