--- a/taskpane.html
+++ b/taskpane.html
@@ -13,7 +13,7 @@
   <!-- addin has a gray background (looks broken) in outlook when resized without a white background -->
 
   <body style="background-color: white">
-    <label for="root">IWARP CA Office Components</label>
+    <label for="root">IWARP CA Office Components in progress ....</label>
     <div id="root" style="margin-right: 4px">IWARP CA Office Components</div>
   </body>
 </html>
